# NeverWrite

./: CHANGELOG.md  README.md
apps/desktop/: package-lock.json  package.json
apps/desktop/native-backend/: Cargo.toml
apps/desktop/native-backend/src/: ai.rs
apps/desktop/src/: App.tsx  App.webClipper.test.tsx
apps/desktop/src-electron/main/: appLogger.test.ts  appLogger.ts  index.ts  ipc.ts  nativeBackend.ts  window.ts
apps/desktop/src-electron/preload/: index.ts
apps/desktop/src-electron/shared/: ipc.ts
apps/desktop/src/app/: detachedTabTransfer.ts  detachedWindows.test.ts
apps/desktop/src/app/runtime/: types.ts
apps/desktop/src/app/utils/: runtimeLog.test.ts  runtimeLog.ts  vaultChangeSync.test.ts  vaultChangeSync.ts
apps/desktop/src/features/ai/: AIChatDetachedWindowHost.test.tsx  AIChatWorkspaceHost.tsx  types.ts
apps/desktop/src/features/ai/components/: AIChatMessageItem.test.tsx  AIChatMessageItem.tsx  AIChatMessageList.tsx
apps/desktop/src/features/ai/store/: chatStore.test.ts  chatStore.ts
apps/desktop/src/features/ai/utils/: runtimeMetadata.test.ts  runtimeMetadata.ts
apps/web-clipper/: package.json
docs/: ai-session-history.md  app-logs.md
